<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_my_study"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/item_name_margin_left"
                android:src="@drawable/voice_notice" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/person_app_2_set_voice_remind"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_alarmvoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_arrow_margin_left"
                android:layout_marginRight="@dimen/item_arrow_margin_right"
                android:button="@drawable/button_switch_selector" />
        </LinearLayout>

        <View
            style="@style/divide_line_horizontal"
            android:background="@color/bg_color_1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_my_knowledge"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/item_name_margin_left"
                android:src="@drawable/shake_notice" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/person_app_2_set_shake_remind"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_alarmzhendong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_arrow_margin_left"
                android:layout_marginRight="@dimen/item_arrow_margin_right"
                android:button="@drawable/button_switch_selector" />
        </LinearLayout>

        <View
            style="@style/divide_line_horizontal"
            android:background="@color/bg_color_1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_message_push"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:text="@string/person_app_2_set_message_push"
                android:textColor="@color/color_1b1b1b"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkbox_message_push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_arrow_margin_left"
                android:layout_marginRight="10dp"
                android:button="@drawable/person_setting_uncheck" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_cfcfcf" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/person_setting_tips"
        android:textColor="@color/color_818181"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/change_password_confirm_bg"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>