<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_function_introduce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/person_center_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:text="@string/person_app_4_set_function_introduce"
            android:textColor="@color/color_1b1b1b"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/person_center_next" />
    </LinearLayout>

    <View
        style="@style/divide_line_horizontal"
        android:background="@color/bg_color_1" />

    <LinearLayout
        android:id="@+id/layout_faq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/person_center_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:text="@string/person_app_4_set_faq"
            android:textColor="@color/color_1b1b1b"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/person_center_next" />
    </LinearLayout>

    <View
        style="@style/divide_line_horizontal"
        android:background="@color/bg_color_1" />

    <LinearLayout
        android:id="@+id/layout_advise"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/person_center_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:text="@string/person_app_4_set_advise"
            android:textColor="@color/color_1b1b1b"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/person_center_next" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_cfcfcf" />
</LinearLayout>