<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/person_center_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:text="@string/person_app_0_set_change_password"
                android:textColor="@color/color_1b1b1b"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_arrow_margin_left"
                android:layout_marginRight="10dp"
                android:src="@drawable/person_center_next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:background="@color/color_cfcfcf" />

        <LinearLayout
            android:id="@+id/layout_gesture_fingerprint_lock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/person_center_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:text="@string/person_app_0_set_gesture_fingerprint_lock"
                android:textColor="@color/color_1b1b1b"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_gesture_fingerprint_lock_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="@color/color_818181"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_arrow_margin_left"
                android:layout_marginRight="10dp"
                android:src="@drawable/person_center_next" />
        </LinearLayout>

        <View
            style="@style/divide_line_horizontal"
            android:background="@color/color_cfcfcf"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_face"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/person_center_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:text="刷脸登录"
                android:textColor="@color/color_1b1b1b"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_arrow_margin_left"
                android:layout_marginRight="10dp"
                android:src="@drawable/person_center_next" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_cfcfcf" />
</LinearLayout>