<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/person_center_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/person_center_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="原始密码"
                android:textColor="@color/color_1b1b1b"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_edit_old_id"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@null"
                android:hint="请填写原始密码"
                android:inputType="textPassword"
                android:textColor="@color/color_818181"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/divide_line_horizontal"
            android:background="@color/color_cfcfcf" />

        <LinearLayout
            android:id="@+id/layout_gesture_fingerprint_lock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/person_center_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="@string/person_app_newpwd1_set_change_password"
                android:textColor="@color/color_1b1b1b"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_edit_new1_id"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@null"
                android:hint="请输入新的密码"
                android:inputType="textPassword"
                android:textColor="@color/color_818181"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/divide_line_horizontal"
            android:background="@color/color_cfcfcf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/person_center_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/person_app_newpwd2_set_change_password"
                android:textColor="@color/color_1b1b1b"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_edit_new2_id"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:hint="请再次输入新密码"
                android:inputType="textPassword"
                android:textColor="@color/color_818181"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_cfcfcf" />

    <Button
        android:id="@+id/bt_confirm_change"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/change_password_confirm_bg"
        android:text="@string/confirm_change"
        android:textColor="@color/color_white"
        android:textSize="16sp" />
</LinearLayout>